--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,13 +1,39 @@
+$primary-color: #ffed69;
+$secondary-color: #000000;
+$primary-text-color: #ffffff;
+$secondary-text-color: #191818;
+$success-color: #43c981;
+$error-color: #dc3545;
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $secondary-color;
+  color: $primary-text-color;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    color: $primary-text-color;
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+:export {
+  primary-color: $primary-color;
+  secondary-color: $secondary-color;
+  primary-text-color: $primary-text-color;
+  secondary-text-color: $secondary-text-color;
+  success-color: $success-color;
+  error-color: $error-color;
 }
