Add ChatBox components and initate socket connection

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,5 +1,6 @@
 $primary-color: #ffed69;
 $secondary-color: #000000;
+$secondary-color-light: #363636;
 $primary-text-color: #ffffff;
 $secondary-text-color: #191818;
 $success-color: #43c981;
