Completing Sending messages on Frontend

--- a/frontend/src/pages/chatRoom/components/chatBox/components/chatBody/index.module.scss
+++ b/frontend/src/pages/chatRoom/components/chatBox/components/chatBody/index.module.scss
@@ -3,7 +3,6 @@
 .chatBody {
   flex: 1;
   background-color: $secondary-color-light;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  max-height: calc(100vh - 100px);
+  overflow: scroll;
 }
