--- a/frontend/src/pages/chatRoom/components/chatBox/index.module.scss
+++ b/frontend/src/pages/chatRoom/components/chatBox/index.module.scss
@@ -2,6 +2,9 @@
 
 .chatBox {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
+  max-height: 100vh;
+  max-width: 800px;
 }
