Add media queries and update chatlist styles

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,5 @@
+@import "@/global/styles/media-queries.scss";
+
 $primary-color: #ffed69;
 $secondary-color: #000000;
 $secondary-color-light: #363636;
