--- a/frontend/src/pages/chatRoom/components/chatBox/components/chatBody/components/chatMessage/index.module.scss
+++ b/frontend/src/pages/chatRoom/components/chatBox/components/chatBody/components/chatMessage/index.module.scss
@@ -52,6 +52,8 @@
     position: relative;
     p {
       font-size: 0.9rem;
+      margin-bottom: 1rem;
+      margin-top: 0.2rem;
     }
     span {
       position: absolute;
